syntax = "proto3";

package example;
option go_package = "myproject/example;example";

import "google/api/annotations.proto";

service ExampleService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/v1/sayhello"
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}



service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  string username = 1;
  bool valid = 2;
}